# geminiwebcli

./: .gitignore  2026-03-06-geminiwebcli-setup.md  2026-03-16-geminiwebcli-image-features.md  CLAUDE.md  PLAN.md  README.md  geminiwebcli.md  pyproject.toml
geminiwebcli/: batch.py  bot.py  browser.py  cli.py  commands.py  config.py
geminiwebcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
